--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
 max-width:500px;
-line-height:1.4;
+line-height:1.5;
 font-family:Serif;
 margin:40px auto;
 padding:0 17px;
@@ -28,6 +28,19 @@ font-size:100%;
 
 h4 {
 font-size:100%;
+}
+
+a:link {
+    color:#000066;
+}
+
+a:hover {
+    text-decoration:none;
+}
+
+a:visited {
+    color:#555555;
+    text-decoration:none;
 }
 
 li {
@@ -65,6 +78,8 @@ font-style:italic;
 }
 
 .mainheader {
+    font-size:110%;
     font-family:monospace;
     text-align:center;
+    font-weight:normal;
 }
